--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "pinia": "^2.0.0-rc.10",
+    "requset": "^0.0.1-security",
     "vue": "^3.2.13",
     "vue-router": "^4.1.3"
   },
